@startuml

hide methods
left to right direction

class Platform {
  -String designation
}

class Administrator {
  -String name
  -String email
}

class Courier {
  -String name
  -String email
  -Integer phoneNumber
  -Integer socialSecurityNumber
  -Integer nif
  -String status
}

class User {
  -String name
  -String email
  -String password
}

class Pharmacy {
  -String designation
  -String email
  -Integer parkMax
}

Platform "1" -- "1" Pharmacy : has registered >
Platform "1" -- "1" Administrator : has registered >
Platform "1" -- "*" User : has registered >

Administrator "1" -- "*" Courier : manage >
Administrator "0..1" -- "1" User : acts as >

Courier "*" -- "1" Pharmacy : associated to >


@enduml
